try to update to latest reports cog code

--- a/reportsfork/locales/hr-HR.po
+++ b/reportsfork/locales/hr-HR.po
@@ -3,17 +3,17 @@ msgstr ""
 "Project-Id-Version: red-discordbot\n"
 "POT-Creation-Date: 2023-05-02 23:06+0000\n"
 "Last-Translator: \n"
-"Language-Team: Vietnamese\n"
+"Language-Team: Croatian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: redgettext 3.4.2\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Crowdin-Project: red-discordbot\n"
 "X-Crowdin-Project-ID: 289505\n"
-"X-Crowdin-Language: vi\n"
+"X-Crowdin-Language: hr\n"
 "X-Crowdin-File-ID: 194\n"
-"Language: vi_VN\n"
+"Language: hr_HR\n"
 
 #: redbot/cogs/reports/reports.py:26
 #, docstring
